--- a/index.html
+++ b/index.html
@@ -57,49 +57,59 @@
 devise authentication
 
 blueprint css layout, built with Boks </p><h2>Dependencies</h2>
-<p>Gems included by the bundle:
-  * abstract (1.0.0)
-  * actionmailer (3.0.0.beta3)
-  * actionpack (3.0.0.beta3)
-  * activemodel (3.0.0.beta3)
-  * activerecord (3.0.0.beta3)
-  * activeresource (3.0.0.beta3)
-  * activesupport (3.0.0.beta3)
-  * arel (0.3.3)
-  * builder (2.1.2)
-  * bundler (0.9.24)
-  * devise (1.1.rc1)
-  * erubis (2.6.5)
-  * i18n (0.3.7)
-  * mail (2.2.0)
-  * memcache-client (1.8.2)
-  * mime-types (1.16)
-  * polyglot (0.3.1)
-  * rack (1.1.0 c6805f)
-  * rack-mount (0.6.3)
-  * rack-test (0.5.3)
-  * rails (3.0.0.beta3 43e2fd)
-  * railties (3.0.0.beta3)
-  * rake (0.8.7)
-  * sqlite3-ruby (1.2.5)
-  * text-format (1.0.0)
-  * text-hyphen (1.0.0)
-  * thor (0.13.4)
-  * treetop (1.4.5)
-  * tzinfo (0.3.20)
-  * warden (0.10.3)
+<p>Gems included by the bundle: </p>
+<ul>
+  <li> abstract (1.0.0)</li>
+  <li> actionmailer (3.0.0.beta3)</li>
+  <li> actionpack (3.0.0.beta3)</li>
+  <li> activemodel (3.0.0.beta3)</li>
+  <li> activerecord (3.0.0.beta3)</li>
+  <li> activeresource (3.0.0.beta3)</li>
+  <li> activesupport (3.0.0.beta3)</li>
+  <li> arel (0.3.3)</li>
+  <li> builder (2.1.2)</li>
+  <li> bundler (0.9.24)</li>
+  <li> devise (1.1.rc1)</li>
+  <li> erubis (2.6.5)</li>
+  <li> i18n (0.3.7)</li>
+  <li> mail (2.2.0)</li>
+  <li> memcache-client (1.8.2)</li>
+  <li> mime-types (1.16)</li>
+  <li> polyglot (0.3.1)</li>
+  <li> rack (1.1.0 c6805f)</li>
+  <li> rack-mount (0.6.3)</li>
+  <li> rack-test (0.5.3)</li>
+  <li> rails (3.0.0.beta3 43e2fd)</li>
+  <li> railties (3.0.0.beta3)</li>
+  <li> rake (0.8.7)</li>
+  <li> sqlite3-ruby (1.2.5)</li>
+  <li> text-format (1.0.0)</li>
+  <li> text-hyphen (1.0.0)</li>
+  <li> thor (0.13.4)</li>
+  <li> treetop (1.4.5)</li>
+  <li> tzinfo (0.3.20)</li>
+  <li> warden (0.10.3)</li>
+</ul>
 
-</p>
 <h2>Install</h2>
 <p>
 rails <app-name> -m http://github.com/lgs/r3ootb/raw/master/main
 </p>
 <h2>License</h2>
-<p>Copyright © 2010 Luca G. Soave, released under the MIT license</p>
+<p> (The MIT License)
+
+Copyright © 2010 Luca G. Soave
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the ‘Software’), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED ‘AS IS’, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.  </p>
+
 <h2>Authors</h2>
-<p>Luca G. Soave (luca.soave@gmail.com)<br/><br/>      </p>
+<p>Luca G. Soave<br/><br/>      </p>
 <h2>Contact</h2>
-<p>Luca G. Soave (luca.soave@gmail.com)<br/>      </p>
+<p>Luca G. Soave<br/>http://github.com/lgs      </p>
 
 
     <h2>Download</h2>
