--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ blueprint css layout, built with Boks </p><h2>Dependencies</h2>
 
 <h2>Install</h2>
 <p>
-rails <app-name> -m http://github.com/lgs/r3ootb/raw/master/main
+<h3>rails app-name -m http://github.com/lgs/r3ootb/raw/master/main </h3>
 </p>
 <h2>License</h2>
 <p> (The MIT License)<br/></p>
